# aegis

./: readme.md
backend/: .gitignore  Pipfile  pyproject.toml  test.py  test_with_ffmpeg.py
backend/app/: main.py
backend/app/core/: database.py
backend/app/crud/: camera.py
backend/app/routers/: __init__.py  camera.py  items.py
backend/app/schemas/: camera.py
docs/: db.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: Home.vue
frontend/src/components/navigation/: Sidebar.vue
frontend/src/router/: index.ts
frontend/src/views/: AuthPage.vue  CamerasView.vue  DashboardView.vue  SettingsView.vue
